feat: Implement a DB connection, UI sample with `glade`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
             POSTGRES_DB: ${DB_NAME}
         volumes:
             - postgres-data:/var/lib/postgresql/data
+        ports:
+            - "5432:5432"
 
     pgadmin:
         image: dpage/pgadmin4:latest
@@ -20,7 +22,7 @@ services:
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
             PGADMIN_THEME: dark
         ports:
-            - "5050:80"
+            - "8081:80"
         depends_on:
             - postgres
         volumes:
