--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
-export DB_USER=user
-export DB_PASSWORD=password
+export DB_USER=admin
+export DB_PASSWORD=admin
 export DB_NAME=coursework
 export PGADMIN_EMAIL=user@pgadmin.com
 export PGADMIN_PASSWORD=password
