--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,29 +4,29 @@ services:
     postgres:
         image: postgres:16
         hostname: postgres-db
-        restart: always
+        restart: on-failure
         environment:
             POSTGRES_USER: ${DB_USER}
             POSTGRES_PASSWORD: ${DB_PASSWORD}
             POSTGRES_DB: ${DB_NAME}
         volumes:
-            - ./.postgres-data:/var/lib/postgresql/data
+            - postgres-data:/var/lib/postgresql/data
+            - ./migrations:/docker-entrypoint-initdb.d
         ports:
             - "5432:5432"
 
     pgadmin:
-        image: dpage/pgadmin4:latest
-        restart: always
+        image: elestio/pgadmin:latest
+        restart: on-failure
         environment:
             PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
             PGADMIN_THEME: dark
         ports:
             - "8081:80"
-        depends_on:
-            - postgres
         volumes:
             - pgadmin-data:/var/lib/pgadmin
 
 volumes:
     pgadmin-data:
+    postgres-data:
